--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
    box-sizing: border-box;
 }
 
+:root{
+   --card-color-primary:#f7dd43;
+   --card-title-color-border:#746615;
+
+}
+
+body.blue{
+   --card-color-primary:#338Af3;
+   --card-title-color-border:#338Af3;
+}
+
 ul {
    list-style: none;
 }
@@ -40,7 +51,7 @@ header {
    padding: 32px 23px;
    text-align: center;
    background: #1d1c19;
-   border-bottom: 2px solid #f7dd43;
+   border-bottom: 2px solid var(--card-color-primary);
    border-radius: 6px;
 
 }
@@ -53,13 +64,13 @@ header {
 
    border-radius: 6px;
    padding: 8px 16px;
-   border: 1px solid #746615;
+   border: 1px solid var(--card-title-color-border);
 
    width: fit-content;
    margin-inline: auto;
    margin-bottom: 53px;
 
-   color: #f7dd43;
+   color: var(--card-color-primary);
 
 }
 
@@ -94,4 +105,39 @@ header {
    font-size: 36px;
    line-height: 125%;
    color: #e1e1e6;
+}
+
+.card h2:hover,
+.card ul li strong:hover, 
+.card ul li img:hover{
+   transform: scale(1.1);
+}
+
+.card h2,
+.card ul li strong, 
+.card ul li img{
+   transition: transform 0.4s;
+}
+
+.card{
+   opacity: 0;
+   animation: appear 2.5s forwards;
+}
+
+@keyframes appear{
+   0%{
+      transform: translateY(-50px);
+      opacity: 0;
+   }
+   100%{
+      opacity: 1;
+   }
+}
+
+@media (min-width: 700px) {
+   #cards{
+      max-width: 670px;
+      flex-direction: row;
+      flex-wrap: wrap;
+   }
 }
